# ProTriPlay

./: .gitignore  README_CN.md  config.py  gui_test.py  gui_test_cn.py  my_test.py  my_test_cn.py  readme.md  requirements.txt  role.py  role_cn.py
.trae/documents/: newtest_plan.md
new_story/: api_client.py  config.py  main.py  pyproject.toml
new_story/agents/: __init__.py  base_agent.py  director_agent.py  protagonist_agent.py  role_agent.py  screenwriter_agent.py
new_story/memory/: __init__.py  memory_manager.py  vector_store.py
new_story/models/: __init__.py  character.py  scene.py  story.py
new_story/tests/: test_director.py  test_e2e.py  test_integration.py  test_memory.py  test_models.py  test_protagonist.py  test_role.py  test_screenwriter.py
